# rsdice

./: .gitignore  Cargo.toml  README.md  compose.yml  tree.txt
.github/: copilot-instructions.md
.github/workflows/: builder.yml  pr.yml  release.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md  askama.toml  compose.yml
backend/.sqlx/: query-078e664a08f211d94dce8773f2ce48ae674c0201e05da28f33cb852a565e6963.json  query-10299667db760f60096a18dde153e44034fc6eca90ec075b1a47b5896e23faa4.json  query-1c3585b38be8a069588f59fffc0f9fccc5879e84eb83080d1780c5ddf044e870.json  query-269dc95ef0bb5ba0ac82ae2069971da22f367706eb175c5ab7978827f15754ff.json  query-29532b44cfa1e28b0940f70d3b5c103a1b0ebfa096446f0660d07fbe0091b167.json  query-2b88af115764dd58423e3a0427dcf4651d6e9ea05e5fb10c3c8dc882722ccd1b.json  query-30e472bf11bfcbbd549c4039d0eb9dd41253316c80dea185a8a3f490e3bbc683.json  query-478252eee4980309aafe45766d52bb9e0ddcd6598bf4439c5c1a3664664faab1.json  query-61008348f044d029eb46d2f0c25cef6adf00c71b7b4020831e638459ac7b7f45.json  query-66962564c6c5ebc0f07a883f5316b46451886ddf821522f1311f827d681cfabb.json  query-71cd2e3d1431093a64c8124c657b4e3ffdbcbf6f6c43e1335f21887c06dcaac7.json  query-89959aade86e9a13bb6d4ace9a6e5c3d5cd614f1e193f875926ccb1766e3f56d.json  query-8f4e1a8e7848fd38115756908b4fb7e173c83076942b4b3a96279f2fc60424a0.json  query-9b74871c2d4050b950fa06564a8003d46fb8db34ba5b402132c5bb72fba7ddf7.json  query-a40bc9fbe1741ff0debc2b1e9618a73805cbcd1c352a1a45b58283cf2a9956fe.json  query-a4d7663297f1e9ec4e5931ec4028bf8383f1111b00c76b1094800de3350d2f0d.json  query-c99caebe2babeee9af85f6c08a5c90f98208ff31c90f346e8a3c7494355c1044.json  query-cf6dfcea06f9e945cb180be3adb6e056e854f8e6f95ae8cf6492edbcba50d8e2.json  query-dcdeffffdd35fc9e087a691bf90ee54ea34d637580ce48497b524cad93eb916d.json  query-e09f9f32d6d155e13f2f2bf763a97002d724a49476322629823e0e335004432b.json  query-e8665cf94b5d72012866773eacc3399ff8d1602f4ce03065c491b01f95944490.json  query-f8c8ec8e9e1e169bbb2ccbcba72b4c67e28da6dc54f760e2faf8a7bb7478091b.json
backend/migrations/: 20260209230541_user_table.up.sql  20260214110000_email_verification.down.sql  20260214110000_email_verification.up.sql  20260215160000_refresh_tokens.up.sql  20260216110000_password_reset_tokens.up.sql
backend/src/: lib.rs  main.rs
backend/src/email/: mail.rs  mailjet.rs  mock.rs  mod.rs
backend/src/email/templates/: password_reset_email.html  verification_email.html
backend/src/games/: event.rs  game.rs  mod.rs
backend/src/models/: user.rs
backend/src/prelude/: claims.rs  config.rs  email.rs  error.rs  mod.rs  state.rs
backend/src/repositories/: user.rs
backend/src/routes/: games.rs  health.rs  mod.rs  users.rs
backend/tests/: auth.rs  email_verification.rs  games_realtime.rs  health.rs  password_reset.rs  users.rs
backend/tests/common/: mod.rs
backend/worlds/: default.world
common/: Cargo.toml  README.md
common/src/: area.rs  color.rs  game.rs  lib.rs  player.rs  stack.rs  tile.rs  world.rs
docker/: builder.Dockerfile
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  games.ts
frontend/src/components/: AuthFormPage.tsx  FormField.tsx  HealthIndicator.tsx  Layout.tsx  PasswordRequirements.tsx  PrivateRoute.tsx  SectionCard.tsx  StatusMessage.tsx  SubmitButton.tsx
frontend/src/pages/: ForgotPassword.tsx  Game.tsx  Games.tsx  Home.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  Rules.tsx  VerifyEmail.tsx
frontend/src/utils/: useFormSubmit.ts  usePasswordFields.ts  validation.ts
frontend/src/wasm/: game.d.ts  game.js  game_bg.wasm.d.ts
game/: Cargo.toml  README.md
game/src/: lib.rs  main.rs
scripts/: build-wasm.sh
