[package]
name = "backend"
version = "0.0.1"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.15.4"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
common = { path = "../common" }
tokio-stream = { version = "0.1.18", features = ["sync", "time"] }

[dev-dependencies]
axum-test = { version = "18.7.0", features = ["ws"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
