[package]
name = "common"
version = "0.0.1"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.149"
