[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    # Core
    "default_app",
    "std",
    "bevy_winit",
    "multi_threaded",
    "default_font",
    # 3D rendering
    "3d_bevy_render",
    # UI, scenes, audio, picking (from the default 3d profile)
    "ui_bevy_render",
    "scene",
    "audio",
    "picking",
    # WASM
    "webgl2",
] }
common = { path = "../common" }
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
