[package]
name = "game"
version = "0.0.2"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.18.0" }
common = { path = "../common" }
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"
